[gd_scene load_steps=5 format=3 uid="uid://bvcxgk16py2wy"]

[ext_resource type="Script" path="res://gui/conversation/settings_dialog/settings_dialog.gd" id="1_tdrjp"]
[ext_resource type="PackedScene" uid="uid://c77dkw5jdhci3" path="res://gui/conversation/settings_dialog/category_container.tscn" id="1_xo1gq"]
[ext_resource type="PackedScene" uid="uid://b1btmq8y3gexs" path="res://game_settings/components/_misc_components/input_confirm_window/input_confirm_window.tscn" id="2_31oth"]
[ext_resource type="Texture2D" uid="uid://dvtx6j1xg685a" path="res://gui/common/icons/close.png" id="4_bhjxr"]

[node name="SettingsDialog" type="Window"]
title = "SETTINGS_TITLE"
size = Vector2i(520, 270)
unresizable = true
borderless = true
transparent = true
script = ExtResource("1_tdrjp")
category_container_tscn = ExtResource("1_xo1gq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ConfirmButton" type="Button" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "CONFIRM"

[node name="ResetButton" type="Button" parent="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "RESET"

[node name="CloseButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
texture_normal = ExtResource("4_bhjxr")
ignore_texture_size = true
stretch_mode = 5

[node name="InputConfirmWindow" parent="." instance=ExtResource("2_31oth")]
unique_name_in_owner = true

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="hide"]
